<resources>
    <string name="app_name">KotlinReddit</string>

    <string-array name="posts_sort_options">
        <item>Hot</item>
        <item>New</item>
        <item>Preview</item>
        <item>Comments</item>
        <item>Score</item>
    </string-array>

    <string-array name="comments_sort_options">
        <item>New</item>
        <item>Score</item>
    </string-array>
    <string name="title_activity_posts">PostsActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_hot">Hot</string>
    <string name="action_new">New</string>
    <string name="action_preview">Preview</string>
    <string name="action_comments">Comments</string>
    <string name="action_score">Score</string>
    <string name="action_subreddit">Subreddit</string>

    <string name="action_author">Author</string>
    <string name="action_best">Best</string>
    <string name="action_controversial">Controversial</string>
    <string name="action_old">Old</string>
    <string name="action_qa">Q&amp;A</string>




</resources>
