<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_best"
        android:orderInCategory="100"
        android:title="@string/action_best"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_new"
        android:orderInCategory="101"
        android:title="@string/action_new"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_author"
        android:orderInCategory="102"
        android:title="@string/action_author"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_controversial"
        android:orderInCategory="103"
        android:title="@string/action_controversial"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_old"
        android:orderInCategory="104"
        android:title="@string/action_old"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_qa"
        android:orderInCategory="105"
        android:title="@string/action_qa"
        app:showAsAction="never"/>

</menu>
