<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_hot"
        android:orderInCategory="100"
        android:title="@string/action_hot"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_new"
        android:orderInCategory="101"
        android:title="@string/action_new"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_preview"
        android:orderInCategory="102"
        android:title="@string/action_preview"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_comments"
        android:orderInCategory="103"
        android:title="@string/action_comments"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_score"
        android:orderInCategory="104"
        android:title="@string/action_score"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_subreddit"
        android:orderInCategory="105"
        android:title="@string/action_subreddit"
        app:showAsAction="never"/>
</menu>
